--- a/hack.html
+++ b/hack.html
@@ -6,8 +6,11 @@
     <title>Blog</title>
 </head>
 <body>
-    <p>바로 아래 클릭</p>
-    <p><img src="http://hackhub.net:82/tracker_for_me"/></p>
+    <p>ask 접속한 애들 ip</p>
+    <a href="https://yip.su/listfull/akra427Gxh6"클릭/>
     
+    <p>ip를 입력해서 위치 알아내는 사이트</p>
+    <a href="http://mylocation.co.kr/"클릭/>
+
 </body>
 </html>
