--- a/hack.html
+++ b/hack.html
@@ -7,10 +7,10 @@
 </head>
 <body>
     <p>ask 접속한 애들 ip</p>
-    <a href="https://yip.su/listfull/akra427Gxh6"클릭/>
+    <a href="https://yip.su/listfull/akra427Gxh6">클릭</a>
     
     <p>ip를 입력해서 위치 알아내는 사이트</p>
-    <a href="http://mylocation.co.kr/"클릭/>
+    <a href="http://mylocation.co.kr/">클릭</a>
 
 </body>
 </html>
